--- a/assets/style.css
+++ b/assets/style.css
@@ -356,7 +356,7 @@ h4 {
 
 /* login form and register */
 .login-page,
-.register-page {
+.register-page, .forgot-password-page {
   font-family: poppins;
   background: linear-gradient(
     90deg,
@@ -370,7 +370,7 @@ h4 {
 }
 
 .login-form,
-.register-form {
+.register-form, .forgot-password-form {
   font-family: poppins;
   background: rgba(43, 45, 66, 0.1);
   backdrop-filter: blur(5px);
@@ -385,7 +385,7 @@ h4 {
 }
 
 .login-form h2,
-.register-form h2 {
+.register-form h2, .forgot-password-form h2 {
   margin-bottom: 1.5rem;
   text-align: center;
 }
